Update landing page to show only Web Developer text and fix text overflow on scroll

--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -221,7 +221,7 @@
 h2.landing-info-h2 {
   color: #c481ff;
   font-size: 42px;
-  width: 120%;
+  width: auto;
   margin: 0;
   font-family: "Geist", sans-serif;
   font-weight: 600;
@@ -229,24 +229,18 @@ h2.landing-info-h2 {
   margin-left: -5px;
   overflow: hidden;
   height: 50px;
+  line-height: 50px;
+}
+.landing-h2-1 {
+  position: relative;
 }
 .landing-h2-2 {
   position: absolute;
   top: 0;
+  display: none;
 }
 .landing-info-h2::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 120%;
-  z-index: 3;
-  background-image: linear-gradient(
-    0deg,
-    var(--backgroundColor) 40%,
-    rgba(0, 0, 0, 0) 110%
-  );
-  top: 0;
-  left: 0;
+  display: none;
 }
 @media screen and (min-width: 500px) {
   .landing-circle2 {
